--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-/build
-google-services.json
+# Android Studio configuration.
+*.iml
+.idea/
+
+# Gradle configuration.
+.gradle/
+build/
+
+# User configuration.
+local.properties
+
+# OS configurations.
+.DS_Store
+
+# Android NDK cmake output.
+.cxx/
